--- a/index.html
+++ b/index.html
@@ -10,30 +10,7 @@
     <div id="app">
         <h1>{{ race }}</h1>
         <div v-for="umamusume in uma">
-            <div id="inputdata">
-                <form @submit.prevent="onSubmit" action="index.html">
-                    <p v-if="errors.length">
-                        <b>Please correct the following error(s):</b>
-                        <ul>
-                            <li v-for="error in errors">{{ error }}</li>
-                        </ul>
-                    </p>
-
-                    <p>
-                        <label for="name">{{ umamusume.name }}</label>
-                        <input id="name" v-model="name" type="text">
-                    </p>
-
-                    <input type="submit" value="Submit"> 
-                </form>
-            </div>
-            <!-- <p>{{ umamusume.name }}</p>
-            <p>{{ umamusume.speed }}</p>
-            <p>{{ umamusume.stamina }}</p>
-            <p>{{ umamusume.power }}</p>
-            <p>{{ umamusume.guts }}</p>
-            <p>{{ umamusume.wise }}</p>
-            <p>{{ umamusume.ranking }}</p> -->
+            <inputdata></inputdata>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
