--- a/index.html
+++ b/index.html
@@ -13,7 +13,22 @@
             <inputdata></inputdata>
         </div>
     </div>
+
+    <div id="route">
+        <h1>確認したいデータを選んでください</h1>
+        <p>
+            <!-- ナビゲーションに router-link コンポーネントを使う -->
+            <!-- リンク先を `to` プロパティに指定します -->
+            <!-- デフォルトで `<router-link>` は `<a>` タグとして描画されます -->
+            <router-link to="/foo">チームレース履歴</router-link>
+            <router-link to="/bar">チームレース履歴削除</router-link>
+        </p>
+        <!-- ルートアウトレット -->
+        <!-- ルートとマッチしたコンポーネントがここへ描画されます -->
+        <router-view></router-view>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
-    <script src="main.js" defer></script>
+    <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
