--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
 <body>
     <div class="nav-bar"></div>
     <div id="app">
-        <h1>{{ race }}</h1>
-        <div v-for="umamusume in uma">
-            <inputdata></inputdata>
-        </div>
+        <!-- <h1>{{ race }}</h1> -->
+        <div v-for="umamusume in uma"></div>
     </div>
 
     <div id="route">
@@ -20,6 +18,7 @@
             <!-- ナビゲーションに router-link コンポーネントを使う -->
             <!-- リンク先を `to` プロパティに指定します -->
             <!-- デフォルトで `<router-link>` は `<a>` タグとして描画されます -->
+            <router-link to="/">チームレース履歴登録</router-link>
             <router-link to="/foo">チームレース履歴</router-link>
             <router-link to="/bar">チームレース履歴削除</router-link>
         </p>
