--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,7 @@
           <!-- リンク先を `to` プロパティに指定します -->
           <!-- デフォルトで `<router-link>` は `<a>` タグとして描画されます -->
           <router-link to="/">チームレース履歴登録</router-link>
-          <router-link to="/foo">チームレース履歴</router-link>
+          <router-link to="/viewdata">チームレース履歴</router-link>
           <router-link to="/bar">チームレース履歴削除</router-link>
       </div>
       <!-- <h1>確認したいデータを選んでください</h1> -->
