--- a/public/index.html
+++ b/public/index.html
@@ -47,12 +47,13 @@
     <!-- TODO: Add SDKs for Firebase products that you want to use
         https://firebase.google.com/docs/web/setup#available-libraries -->
     <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-analytics.js"></script>
+    <script src="config.js"></script>
 
     <script>
       // Your web app's Firebase configuration
       // For Firebase JS SDK v7.20.0 and later, measurementId is optional
       var firebaseConfig = {
-        apiKey: "AIzaSyAVCB7UHEFD0rDBHfvXyy-rw0NWW0VVgsA",
+        apiKey: api_key,
         authDomain: "uma-race-data.firebaseapp.com",
         projectId: "uma-race-data",
         storageBucket: "uma-race-data.appspot.com",
