--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>ウマ娘レース履歴</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vue-js-modal@1.3.31/dist/styles.css">
 
     <!-- update the version number as needed -->
@@ -43,6 +44,7 @@
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-auth.js"></script> 
+    <script src="https://www.gstatic.com/firebasejs/ui/4.7.3/firebase-ui-auth__ja.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-database.js"></script>
 
     <!-- TODO: Add SDKs for Firebase products that you want to use
@@ -75,6 +77,7 @@
           <!-- デフォルトで `<router-link>` は `<a>` タグとして描画されます -->
           <router-link to="/">チームレース履歴登録</router-link>
           <router-link to="/viewdata">チームレース履歴確認</router-link>
+          <router-link to="/login">ログイン</router-link>
       </div>
       <!-- <h1>確認したいデータを選んでください</h1> -->
       <!-- ルートアウトレット -->
