--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>ウマ娘レース履歴</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vue-js-modal@1.3.31/dist/styles.css">
 
     <!-- update the version number as needed -->
@@ -77,7 +77,7 @@
           <!-- デフォルトで `<router-link>` は `<a>` タグとして描画されます -->
           <router-link to="/">チームレース履歴登録</router-link>
           <router-link to="/viewdata">チームレース履歴確認</router-link>
-          <router-link to="/login">ログイン</router-link>
+          <router-link to="/login">ログイン/ログアウト</router-link>
       </div>
       <!-- <h1>確認したいデータを選んでください</h1> -->
       <!-- ルートアウトレット -->
